--- a/dockerElasticUnico.yml
+++ b/dockerElasticUnico.yml
@@ -5,7 +5,7 @@ services:
     container_name: es01
     environment:
       - node.name=es01
-      - cluster.initial_master_nodes=es01
+      - cluster.initial_master_nodes=es01,es02,es03
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
@@ -14,13 +14,56 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - esdata01:/usr/share/elasticsearch/data
+      - esdata01:/home/suso/DockerWorking/ES/data
     ports:
       - 9200:9200
     networks:
       - esnet
+  es02:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
+    container_name: es02
+    environment:
+      - node.name=es02
+      - cluster.initial_master_nodes=es01,es02,es03
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata02:/home/suso/DockerWorking/ES/data
+    ports:
+      - 9200:9200
+    networks:
+      - esnet
+  es03:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.0
+    container_name: es03
+    environment:
+      - node.name=es03
+      - cluster.initial_master_nodes=es01,es02,es03
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata03:/home/suso/DockerWorking/ES/data
+    ports:
+      - 9200:9200
+    networks:
+      - esnet
+
 volumes:
   esdata01:
+    driver: local
+  esdata02:
+    driver: local
+  esdata03:
     driver: local
 
 networks:
